make post cards full-width and border-radius-less when on mobile

--- a/src/assets/style/_content-box.scss
+++ b/src/assets/style/_content-box.scss
@@ -9,3 +9,10 @@
   box-shadow: 1px 1px 5px 0 rgba(0,0,0,.02), 1px 1px 15px 0 rgba(0,0,0,.03);
   transition: transform .3s, background-color .3s, box-shadow .6s;
 }
+
+// remove bottom border radius when on mobile when on mobile
+@media screen and (max-width: 650px) {
+	.content-box {
+		border-radius: 0;
+	}
+}
