--- a/src/assets/style/_details.scss
+++ b/src/assets/style/_details.scss
@@ -3,9 +3,11 @@ details {
   summary {
     margin-bottom: 1.25em;
     padding-left: 0;
+    cursor: pointer;
   }
 }
 
 details > * {
   padding-left: 1.25em;
+  cursor: auto;
 }
