--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -53,19 +53,56 @@ em {
   font-style: italic;
 }
 
-ul { 
-  list-style-type: disc; 
+ul {
+  list-style-type: disc;
   margin-left: 1.25em;
   margin-bottom: 1.25em;
   li {
     margin-bottom: .6em;
   }
 }
-ol { 
-  list-style-type: decimal; 
+ol {
+  list-style-type: decimal;
   margin-left: 1.25em;
   margin-bottom: 1.25em;
   li {
     margin-bottom: .6em;
   }
+}
+
+.checkbox-list {
+  ul {
+    list-style: none;
+    margin-left: 0;
+  }
+}
+
+// Checkbox styles are simplified version of Stephanie Eckles' https://moderncss.dev/pure-css-custom-checkbox-style/
+input[type="checkbox"] {
+  /* Add if not using autoprefixer */
+  -webkit-appearance: none;
+  /* Remove most all native input styles */
+  appearance: none;
+  /* For iOS < 15 */
+  background-color: var(--bg-color);
+  /* Not removed via appearance */
+  margin: 0 0.3em 0 0;
+
+  font: inherit;
+  color: currentColor;
+  width: 1.15em;
+  height: 1.15em;
+  padding-top: 0.1em;
+  padding-left: 0.1em;
+  border: 0.15em solid currentColor;
+  border-radius: 0.15em;
+  display: inline-flex;
+}
+
+input[type="checkbox"]::before {
+  content: "";
+  width: 0.65em;
+  height: 0.65em;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  box-shadow: inset 1em 1em currentColor;
 }
