--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -5,17 +5,18 @@ html {
 
 // Light default theme
 body {
- 	--bg-color: #F3F7F9;
- 	--bg-content-color: #fff;
- 	--bg-code: #fffbf3;
- 	--body-color: #444;
- 	--title-color: #111;
- 	--link-color: #6b17e6;
- 	--border-color:  rgba(0,0,0,.1);;
-  --space: 3.5rem;
-  --content-width: 860px;
-  --header-height: 80px;
-  --radius: 5px;
+	--bg-color: #F3F7F9;
+	--bg-content-color: #fff;
+	--bg-code: #fffbf3;
+	--body-color: #444;
+	--title-color: #111;
+	--link-color: #6b17e6;
+	--border-color:  rgba(0,0,0,.1);
+	--code-color: #9F2B68;
+	--space: 3.5rem;
+	--content-width: 860px;
+	--header-height: 80px;
+	--radius: 5px;
 }
 
 // Make  things smaller for mobile
@@ -35,7 +36,8 @@ body[data-theme="dark"] {
  	--bg-color: #0D2538;
  	--bg-content-color: #0f2d44;
  	--bg-code: rgba(0,0,0,.3);
- 	--border-color:  rgba(255,255,255,.1);;
+ 	--border-color:  rgba(255,255,255,.1);
+	--code-color: #89CFEF; // TODO play with <code> colors, I don't like them
  	--body-color: #ced8de;
  	--title-color: #fff;
  	--link-color: #af9cef;
