style: change header font, and colors
* some adjacent styling

--- a/src/assets/style/_code.scss
+++ b/src/assets/style/_code.scss
@@ -6,6 +6,8 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
  * @author Lea Verou
  */
 
+// TODO make code blocks full-width, as images are
+
 code {
 	font-size: .85em;
 	padding: .2em .5em;
