--- a/src/assets/style/_base.scss
+++ b/src/assets/style/_base.scss
@@ -14,12 +14,12 @@ body {
 	line-height: 1.5;
 }
 
+a {
+	text-decoration: none;
+}
+
 a:not(.button) {
 	color: var(--link-color);
- 	transition: opacity .2s;
-	&:hover {
-		opacity: .8;
-	}
 }
 
 img {
